Enigma/testing/error/missingasterisk.inp
B BETA I II III AAAA (DF) (CG)
SIOJD